[tool.poetry]
name = "municipios-brasileiros-tse"
version = "0.1.0"
description = "Tabela com código tse e código ibge dos municípios"
authors = [ "Beta Faccion <betafcc@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "<5"
ipython = "^7.1"
jupyterlab = "^0.35.3"
numpy = "^1.15"
pandas = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^3.9"
flake8 = "^3.6"
mypy = "^0.641.0"

[tool.pandora]
name = "Municipios Brasileiros TSE"
date = 2018-11-12T13:10:14.758Z

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
